web pageb modifications

--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@
     </head>
     <body>
         <div class="form-style">
-            <h1>MIDI_scanner64<span>Firmware version: xxx</span></h1>
+            <h1>MIDI_inputs16<span>Firmware version: xxx</span></h1>
             <form>
                 <div class="section">General</div>
                 <div class="inner-wrap">
@@ -133,31 +133,6 @@
                         <select name="in2_inv">
                             <option value="0" > NOTE ON when an input is activated </option>
                             <option value="1"> NOTE ON when an input is deactivated </option>
-                        </select>
-                    </label>
-                </div>
-
-                <div class="section">Analog inputs</div>
-                <div class="inner-wrap">
-                    <label>
-                        A1
-                        <select name="a1_en">
-                            <option value="0" > Disabled </option>
-                            <option value="1"> Enabled </option>
-                        </select>
-                    </label>
-                    <label>
-                        A2
-                        <select name="a2_en">
-                            <option value="0" > Disabled </option>
-                            <option value="1"> Enabled </option>
-                        </select>
-                    </label>
-                    <label>
-                        A3
-                        <select name="a3_en">
-                            <option value="0" > Disabled </option>
-                            <option value="1"> Enabled </option>
                         </select>
                     </label>
                 </div>
